Control default JVM options for performance tests in one location